[Enhancement #410] Add the parameter to initialize static metamodel IRIs on generation to the Maven plugin.
Signed-off-by: Martin Ledvinka <martin.ledvinka@hotmail.com>